applications/media-experimental/base/chaptarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chaptarr
  labels:
    app: chaptarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8789
      targetPort: http
      protocol: TCP
  selector:
    app: chaptarr
