applications/media-experimental/base/chaptarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chaptarr
  labels:
    app: chaptarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Chaptarr"
    gethomepage.dev/description: "Books *arr (Readarr fork)"
    gethomepage.dev/group: "Book Automation (Exp)"
    gethomepage.dev/weight: "20"
    gethomepage.dev/icon: "readarr.png"
    gethomepage.dev/href: "http://chaptarr.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://chaptarr.media-experimental.svc.cluster.local:8787"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`chaptarr.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: chaptarr
          port: 8787
